<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/main_name"
        android:background="@color/some" />

    <ImageView
        android:id="@+id/detailsImageViewIW"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/detailsNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nameProduct"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/detailsPriceET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/price"
        android:textSize="24sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/detailsDescriptionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/Description"
        android:gravity="center"
        android:textSize="24sp"/>

</LinearLayout>