<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/main_name"
        android:background="@color/some" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_add_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="InefficientWeight">

        <EditText
            android:id="@+id/nameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nameProduct"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/priceET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:inputType="number"
            android:hint="@string/price"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonAddBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textSize="24sp"
        android:text="@string/add"/>

    <ListView
        android:id="@+id/listViewLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"/>

</LinearLayout>